--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.2",
     "stripe": "^11.15.0"
   },
   "devDependencies": {
