--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^1.50.0",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.19.1",
     "framer-motion": "^9.0.4",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
