--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.19.1",
     "framer-motion": "^9.0.4",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
